--- a/Test_First/test-output/old/Default suite/methods-alphabetical.html
+++ b/Test_First/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bcfcb">  <td>17/01/02 19:17:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Test2.afterClass()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>17/01/02 19:17:48</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Test2.afterMethod()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>17/01/02 19:17:49</td>   <td>1088</td> <td title="&lt;&lt;TestNG_Test2.afterSuite()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>17/01/02 19:17:49</td>   <td>720</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_Test2.afterTest()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>17/01/02 19:17:17</td>   <td>-30989</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Test2.beforeClass()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>17/01/02 19:17:23</td>   <td>-25018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Test2.beforeMethod()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>17/01/02 19:17:17</td>   <td>-31032</td> <td title="&gt;&gt;TestNG_Test2.beforeSuite()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>17/01/02 19:17:17</td>   <td>-31002</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG_Test2.beforeTest()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>17/01/02 19:17:44</td>   <td>-4019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Test2.f()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">f</td> 
+<tr bgcolor="8bcfcb">  <td>17/01/02 19:53:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Test2.SelectFlight()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">SelectFlight</td> 
   <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>17/01/02 19:53:45</td>   <td>3670</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Test2.afterClass()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>17/01/02 19:53:45</td>   <td>3669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Test2.afterMethod()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>17/01/02 19:53:47</td>   <td>5997</td> <td title="&lt;&lt;TestNG_Test2.afterSuite()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>17/01/02 19:53:47</td>   <td>5894</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_Test2.afterTest()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>17/01/02 19:53:18</td>   <td>-23112</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Test2.beforeClass()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>17/01/02 19:53:24</td>   <td>-17237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Test2.beforeMethod()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>17/01/02 19:53:18</td>   <td>-23152</td> <td title="&gt;&gt;TestNG_Test2.beforeSuite()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>17/01/02 19:53:18</td>   <td>-23124</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG_Test2.beforeTest()[pri:0, instance:SeleniumNewPackage.TestNG_Test2@91161c7]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
 </table>
